# rag_ainews

./: .env.example  .gitignore  README.md  backfill.py  email_template.py  main.py  pyproject.toml  server.py
digests/: 2026-04-27.json  2026-04-27.md  2026-04-28.json  2026-04-28.md  2026-04-29.json  2026-04-29.md  2026-04-30.json  2026-04-30.md  2026-05-01.json  2026-05-02.json  2026-05-02.md  2026-05-03.json  2026-05-03.md  2026-05-04.json  2026-05-04.md  2026-05-05.json  2026-05-05.md  2026-05-06.json  2026-05-06.md  2026-05-07.json  2026-05-07.md  2026-05-08.json  2026-05-08.md  2026-05-09.json  2026-05-09.md  2026-05-10.json  2026-05-10.md  2026-05-11.json  2026-05-11.md  2026-05-12.json  2026-05-12.md  2026-05-13.json  2026-05-13.md  2026-05-14.json  2026-05-14.md  2026-05-15.json  2026-05-15.md  2026-05-16.json  2026-05-16.md  2026-05-17.json  (+46 more)
web/: app.js  app.jsx  data.js  embeddings.json  fonts.css  index.html  styles.css  tweaks-panel.js
